# Python-RemoveComments

./: .gitignore  conda-environment.yml  conda_environment.yml  pyproject.toml  test.c
src/removecomments/: __main__.py  remove.py
