# This is the installation script for the package removecomments. For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ------------------------------- Build System ------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ------------------------------ Project Details ----------------------------- #


[project]
name = "removecomments"
authors = [
    { name = "Andres Garcia Escovar", email = "andres.garcia-escovar@noaa.gov"},
]
description = "A CF compliance checker for netCDF files; covers the standards 1.0 - 1.12."
readme = "README.md"
requires-python = ">=3.11.8"
keywords = [
    "CF", "climate and forecast", "compliance checker", "metadata", "netCDF"
]
license = {text="MIT"}
dependencies = [
    "netcdf4==1.6.2",
    "numpy==1.26.1",
    "pyyaml==6.0.1"
]
version = "0.0.1"


# ----------------------------- Package Commands ----------------------------- #


[project.scripts]
cfchecker = "cfchecker.__main__:main"


# ---------------------------- Packages to Include --------------------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


# -------------------------- Pylint Flags to Include ------------------------- #


[tool.pylint]
disable = [
    "duplicate-code",
    "no-name-in-module",
    "too-many-arguments",
    "too-many-lines",
    "too-many-positional-arguments",
    "unsubscriptable-object"
]
